--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ s0.parentNode.insertBefore(s1,s0);
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BlackSale - Agência Digital</title>
+    <meta name="description" content="Aumente sua presença online com a agência digital líder em marketing e desenvolvimento. Transforme sua visão em realidade com nossa expertise em SEO e soluções personalizadas.">
     <link rel="shortcut icon" href="img/fav.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
