--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ s0.parentNode.insertBefore(s1,s0);
                     <form class="w-100 bg-white rounded p-4 justify-content-center" name="contact" netlify>
                         <div class="d-flex flex-column align-items-center">
                           <input required type="tel" name="H8Tel" placeholder="Seu número de whatsapp com DDD." class="form-control py-3" id="exampleInputEmail1" aria-describedby="emailHelp">
-                          <button onclick="gtag_report_conversion()" type="submit" class="btn mt-2 w-100 text-uppercase">Receber uma avaliação gratuita</button>
+                          <button type="submit" class="btn mt-2 w-100 text-uppercase">Receber uma avaliação gratuita</button>
                         </div>
                     </form>
                 </div>
