--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ s0.parentNode.insertBefore(s1,s0);
                     <hr width="20%" style="border-top-width: 2px;color:#fcd535;opacity: 1!important;">
                     <p>Impulsione suas vendas! <span class="fw-semibold" style="color: #e1a800;">Peça sua avaliação gratuita</span> e receba uma proposta de marketing digital feita <span class="fw-semibold" style="color: #e1a800;">sob medida.</span></p>
                     <p>Nossos especialistas estão à disposição via WhatsApp. Vamos crescer juntos!</p>
-                    <form class="w-100 bg-white rounded p-4 justify-content-center" name="contact" netlify>
+                    <form class="w-100 bg-white rounded p-4 justify-content-center" name="contact" onSubmit={gtag_report_conversion()} netlify>
                         <div class="d-flex flex-column align-items-center">
                           <input required type="tel" name="H8Tel" placeholder="Seu número de whatsapp com DDD." class="form-control py-3" id="exampleInputEmail1" aria-describedby="emailHelp">
                           <button type="submit" class="btn mt-2 w-100 text-uppercase">Receber uma avaliação gratuita</button>
